[MSS-907] Fix Spacing between stars and Review Word

--- a/mvmt/cartridges/app_custom_storefront_mvmt/cartridge/client/default/scss/_yotpo.scss
+++ b/mvmt/cartridges/app_custom_storefront_mvmt/cartridge/client/default/scss/_yotpo.scss
@@ -600,6 +600,7 @@
         background-color: transparent !important;
         font-size: rem(12);
         text-transform: uppercase !important;
+        margin-left: rem(5) !important; 
 
         &:hover {
             color: $light-gray2 !important;
